Halved todo list